# building-with-llama-4

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: utils.py
src/L2/: L2_Student.ipynb
src/L3/: L3_Student.ipynb  utils.py
src/L4/: L4_Student.ipynb
src/L5/: L5_Student.ipynb
src/L6/: L6_Student.ipynb
src/L7/: L7_Student.ipynb
