[project]
name = "building-with-llama-4"
version = "0.1.0"
description = "Building with Llama 4: A Practical Guide to Building AI Applications"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ai-custom-utils",
    "datasets==3.6.0",
    "ipykernel>=6.29.5",
    "llama-api-client==0.1.1",
    "llama-prompt-ops==0.0.7",
    "matplotlib>=3.10.3",
    "openai==1.82.1",
    "opencv-python==4.11.0.86",
    "pdf2image==1.17.0",
    "pydantic==2.11.5",
    "pypdf==5.5.0",
    "python-dotenv==1.0.1",
    "synthetic-data-kit==0.0.4b1",
    "together==1.5.8",
    "torchvision==0.22.0",
    "transformers==4.52.4",
]

[tool.uv.sources]
ai-custom-utils = { git = "https://github.com/davoshack/ai-custom-utils.git" }
